<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/backround_login"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.RegistrationFragment">

    <LinearLayout
        android:id="@+id/llRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llRegSurname"
        app:layout_constrainedHeight="true">

        <TextView
            android:id="@+id/tvName_reg"
            style="@style/TextViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_name"
            android:textColor="@color/whiteTextColor" />

        <EditText
            android:id="@+id/etName_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/whiteTextColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llRegName"
        app:layout_constraintBottom_toTopOf="@id/llRegEmail"
        app:layout_constrainedHeight="true">

        <TextView
            android:id="@+id/tvSurname_reg"
            style="@style/TextViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_surname"
            android:textColor="@color/whiteTextColor" />

        <EditText
            android:id="@+id/etSurname_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/whiteTextColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llRegSurname"
        app:layout_constraintBottom_toTopOf="@id/llRegPassword"
        app:layout_constrainedHeight="true">

        <TextView
            android:id="@+id/tvEmail_reg"
            style="@style/TextViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_email"
            android:textColor="@color/whiteTextColor" />

        <EditText
            android:id="@+id/etEmail_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/whiteTextColor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llRegEmail"
        app:layout_constraintBottom_toTopOf="@id/regButton_reg"
        app:layout_constrainedHeight="true">

        <TextView
            android:id="@+id/tvPassword_reg"
            style="@style/TextViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_password"
            android:textColor="@color/whiteTextColor"
            app:layout_constrainedHeight="true" />

        <EditText
            android:id="@+id/etRegPassword_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/whiteTextColor"
            app:layout_constrainedHeight="true" />
    </LinearLayout>

    <Button
        android:id="@+id/regButton_reg"
        android:background="@color/colorButtonLog"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_button"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/llRegPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>