<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feeds_list">

    <fragment
        android:id="@+id/navigation_feeds_list"
        android:name="com.mediever.softworks.mydstu.ui.feeds.FeedsListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_feeds_list" >
        <action
            android:id="@+id/action_to_feed"
            app:destination="@id/navigation_feed"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/navigation_feeds_list"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_departments"
        android:name="com.mediever.softworks.mydstu.ui.departments.DepartmentsListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_departments_list" >
        <action
            android:id="@+id/action_departments_list_to_department"
            app:destination="@id/navigation_full_department"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.mediever.softworks.mydstu.ui.feeds.FullFeedFragment"
        android:label="FullFeed"
        tools:layout="@layout/fragment_full_feed"/>

    <fragment
        android:id="@+id/navigation_full_department"
        android:name="com.mediever.softworks.mydstu.ui.departments.FullDepartmentFragment"
        android:label="FullDepartment"
        tools:layout="@layout/fragment_full_department">
    </fragment>

    <navigation
        android:id="@+id/navigation_profile"
        android:label="@string/title_profile"
        app:startDestination="@id/navigation_profile_root">
        <fragment
            android:id="@+id/navigation_profile_root"
            android:name="com.mediever.softworks.mydstu.ui.profile.RootProfileFragment"
            tools:layout="@layout/fragment_profile_root"
            app:startDestination="@id/action_profile_root_to_login">

            <action
                android:id="@+id/action_profile_root_to_login"
                app:destination="@id/navigation_profile_login" />
            <action
                android:id="@+id/action_profile_root_to_user"
                app:destination="@id/navigation_profile_user" />
        </fragment>

        <fragment
            android:id="@+id/navigation_profile_login"
            android:name="com.mediever.softworks.mydstu.ui.profile.LoginFragment"
            android:label="Login"
            tools:layout="@layout/fragment_profile_login">
            <action
                android:id="@+id/action_profile_login_to_registration"
                app:destination="@id/navigation_profile_registration"
                app:enterAnim="@anim/fragment_fade_enter"
                app:exitAnim="@anim/fragment_fade_exit"
                app:popEnterAnim="@anim/fragment_fade_enter"
                app:popExitAnim="@anim/fragment_fade_exit" />
        </fragment>
        <fragment
            android:id="@+id/navigation_profile_user"
            android:name="com.mediever.softworks.mydstu.ui.profile.UserFragment"
            android:label="User"
            tools:layout="@layout/fragment_profile_user">
            <action
                android:id="@+id/action_profile_user_to_useredit"
                app:destination="@id/navigation_profile_useredit" />
        </fragment>
        <fragment
            android:id="@+id/navigation_profile_registration"
            android:name="com.mediever.softworks.mydstu.ui.profile.RegistrationFragment"
            android:label="Login"
            tools:layout="@layout/fragment_profile_registration" />
        <fragment
            android:id="@+id/navigation_profile_useredit"
            android:name="com.mediever.softworks.mydstu.ui.profile.UserEditFragment"
            android:label="UserEdit"
            tools:layout="@layout/fragment_profile_useredit">

        </fragment>

    </navigation>
</navigation>
